changed styles in css to make navbar work better

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4781,6 +4781,10 @@ textarea.input-group-sm > .input-group-btn > .btn {
   line-height: 20px;
 }
 
+.navbar-brand img {
+  height: 25px;
+}
+
 .navbar-brand:hover,
 .navbar-brand:focus {
   text-decoration: none;
